Update các chức năng dự án

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -274,10 +274,10 @@
           <div class="col-12 mt-2">
             <div class="form-group">
               <button
-                class="btn btn-secondary col-12 p-0 ps-2 pe-2 fs-12"
+                class="btn btn-primary col-12 p-0 ps-2 pe-2 fs-12"
                 (click)="getProjects()"
               >
-                Áp dụng
+                Tìm kiếm
               </button>
             </div>
           </div>
@@ -290,7 +290,7 @@
       <div class="col-12 p-0">
         <div class="card">
           <div class="card-header p-0">
-            <div class="d-flex justify-content-start">
+            <div class=" justify-content-start" style="display: contents;">
               <button
                 type="button"
                 class="btn btn-outline-secondary p-0 ps-2 pe-2"
@@ -298,7 +298,7 @@
                 data-bs-toggle="offcanvas"
                 data-bs-target="#searchOffcanvas"
               >
-                <i class="fas fa-search"></i> Tìm kiếm
+                <i class="fas fa-search"></i> <span>Tìm kiếm</span>
               </button>
               <button
                 type="button"
@@ -324,14 +324,54 @@
               >
                 <i class="fas fa-trash"></i> Xóa
               </button>
-              <button
+              <!-- <button
                 type="button"
                 class="btn btn-outline-secondary p-0 ps-2 pe-2"
                 title="Xuất Excel"
                 (click)="exportExcel()"
               >
                 <i class="fas fa-file-excel"></i> Xuất excel
-              </button>
+              </button> -->
+              <!-- <button
+                type="button"
+                class="btn btn-outline-secondary p-0 ps-2 pe-2"
+                title="Mức độ ưu tiên cá nhân"
+                (click)="openEditProjectPersonalPriority()"
+              >
+                <i class="fas fa-chart-bar"></i> Mức độ ưu tiên cá nhân
+              </button> -->
+              <!-- <button
+                type="button"
+                class="btn btn-outline-secondary p-0 ps-2 pe-2"
+                title="Tổng hợp nhân công"
+                (click)="openProjectWorkerPriority()"
+              >
+                <i class="fas fa-chart-simple"></i> Tổng hợp nhân công
+              </button> -->
+              <!-- <button
+                type="button"
+                class="btn btn-outline-secondary p-0 ps-2 pe-2"
+                title="Danh sách báo cáo công việc"
+                (click)="openProjectListWorkReport()"
+              >
+                <i class="fas fa-list-ul"></i> Danh sách báo cáo công việc
+              </button> -->
+              <!-- <button
+                type="button"
+                class="btn btn-outline-secondary p-0 ps-2 pe-2"
+                title="Trạng thái dự án"
+                (click)="openProjectStatus()"
+              >
+                <i class="fas fa-circle-half-stroke"></i> Trạng thái dự án
+              </button> -->
+              <!-- <button
+                type="button"
+                class="btn btn-outline-secondary p-0 ps-2 pe-2"
+                title="Chuyển dự án"
+                (click)="changeProject()"
+              >
+                <i class="fas fa-recycle"></i> Chuyển dự án
+              </button> -->
             </div>
           </div>
           <div class="card-body p-0">
