--- a/src/app/components/projects/project-form-add-status/project-form-add-status.component.html
+++ b/src/app/components/projects/project-form-add-status/project-form-add-status.component.html
@@ -6,9 +6,9 @@
   <div class="row">
     <div class="col-12 mt-2">
       <div class="form-group">
-        <label for="">STT</label>
+        <label for="" class="fs-12">STT</label>
         <input
-          class="form-control form-control-sm"
+          class="form-control form-control-sm fs-12"
           type="text"
           name=""
           id=""
@@ -17,9 +17,9 @@
         />
       </div>
       <div class="form-group mb-2">
-        <label for="">Trạng thái</label>
+        <label for="" class="fs-12">Trạng thái</label>
         <input
-          class="form-control form-control-sm"
+          class="form-control form-control-sm fs-12"
           type="text"
           name=""
           id=""
@@ -34,18 +34,18 @@
 <div class="modal-footer bg-whitesmoke br p-0">
   <button
     type="button"
-    style="background-color: limegreen"
-    class="btn btn-sm text-light"
-    (click)="saveProjectStatus()"
-  >
-    Lưu
-  </button>
-  <button
-    type="button"
-    class="btn btn-sm text-light btn-close-modal"
-    style="background-color: red"
+    class="btn btn-sm btn-close-modal btn-outline-danger fs-12"
     (click)="activeModal.dismiss()"
   >
     Đóng
+  </button>
+  <button
+    type="button"
+    style="background-color: limegreen"
+    class="btn btn-sm text-light fs-12"
+    (click)="saveProjectStatus()"
+  >
+  <i class="fas fa-sd-card"></i>
+    Lưu
   </button>
 </div>
