update: update giao dien

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -149,17 +149,8 @@
 
             <!-- App body starts -->
             <div class="app-body">
-
-                <!-- Container starts -->
-                <div class="container-fluid">
-                    <router-outlet/>
-                    
-                    <ng-template #viewcomponent></ng-template>
-                    
-
-                </div>
-                <!-- Container ends -->
-
+                <router-outlet></router-outlet>
+              
             </div>
             <!-- App body ends -->
 
