Update func save project

--- a/src/app/components/projects/project-form/project-form.component.html
+++ b/src/app/components/projects/project-form/project-form.component.html
@@ -671,6 +671,12 @@
                 class="border border-primary"
               ></div>
             </div>
+            <div class="form-group mb-2" hidden>
+              <div
+                id="tb_ProjectUser"
+                class="border border-primary"
+              ></div>
+            </div>
           </div>
         </div>
       </div>
