fix giao dien modal, button

--- a/src/app/components/dailyreport/dailyreport.component.html
+++ b/src/app/components/dailyreport/dailyreport.component.html
@@ -73,7 +73,7 @@
             </div>
             <div class="card-body p-0">
               <div class="custom-tabs-container" >
-                <ul class="nav nav-tabs" id="customTab3" role="tablist" >
+                <ul class="nav nav-tabs fs-12" id="customTab3" role="tablist" >
                   <li class="nav-item" role="presentation">
                     <a class="nav-link active" id="tab-oneAA" data-bs-toggle="tab" href="#oneAA" role="tab"
                       aria-controls="oneAA" aria-selected="true" (click)="setCheckModeExcel(0)">Hành chính nhân sự
