--- a/src/app/components/VPP/OfficeSupplies/office-supplies.component.css
+++ b/src/app/components/VPP/OfficeSupplies/office-supplies.component.css
@@ -5,6 +5,9 @@
   overflow: hidden;
   position: relative;
 }
+.ng-select .ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-child {
+  font-size: 12px !important;
+}
 
 /* Thẻ offcanvas */
 .custom-offcanvas {
@@ -65,6 +68,9 @@
   align-items: center;
   margin-left: 20px;
   
+}
+.row{
+  margin:auto !important;
 }
 
 ::ng-deep ng-select.form-control .ng-clear-wrapper:hover {
