--- a/src/app/components/VPP/OfficeSupplies/office-supplies.component.html
+++ b/src/app/components/VPP/OfficeSupplies/office-supplies.component.html
@@ -6,10 +6,10 @@
     data-bs-backdrop="false"
   >
     <div class="offcanvas-header pt-0 mt-2 pb-0 mb-2">
-      <h5 class="offcanvas-title fs-12">Tìm kiếm</h5>
+      <h5 class="offcanvas-title ">Tìm kiếm</h5>
       <button
         type="button"
-        class="btn-close text-reset fs-12"
+        class="btn-close text-reset "
         data-bs-dismiss="offcanvas"
         aria-label="Close"
       ></button>
@@ -18,7 +18,7 @@
       <div class="row h-auto">
         <div class="col-12">
           <div class="form-group">
-            <label class="fs-12">Nhập từ khóa</label>
+            <label class="">Nhập từ khóa</label>
             <input
               type="text"
               [(ngModel)]="searchText" (input)="onSearchChange($event)" placeholder="Tìm kiếm..."
@@ -99,24 +99,23 @@
   aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
-      <div  class="modal-header">
+      <div  class="modal-header  bg-primary text-white" >
         <h5 class="modal-title" id="addProductModalLabel">Chi tiết sản phẩm</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <form class="row g-3 needs-validation was-validated" novalidate>
-
-          <div class="row mb-3">
-            <div class="col md-6">
+          <div class="row mb-1">
+            <div class="col-md-6">
               <label for="CodeRTC" class="form-label">Mã RTC <sup style="color: red;">(*)</sup></label>
-              <input type="text" class="form-control" [(ngModel)]="newProduct.CodeRTC" name="CodeRTC" readonly>
+              <input type="text" class="form-control " [(ngModel)]="newProduct.CodeRTC" name="CodeRTC" readonly>
             </div>
-            <div class="col md-6">
+            <div class="col-md-6 ">
               <label for="CodeNCC" class="form-label">Mã NCC <sup style="color: red;">(*)</sup></label>
-              <input type="text" class="form-control" [(ngModel)]="newProduct.CodeNCC" name="CodeNCC"
+              <input type="text" class="form-control " [(ngModel)]="newProduct.CodeNCC" name="CodeNCC"
                 placeholder="Nhập mã NCCC" required>
               <div class="invalid-feedback">
-                Vui lòng nhập mã nhà cung cấp!
+                Vui lòng nhập mã NCC!
               </div>
             </div>
           </div>
@@ -145,43 +144,53 @@
           </div>
 
           <div class="row mb-3">
-            <div class="col md-6">
+            <div class="col md-6 ">
               <label for="SupplyUnitID" class="form-label">Đơn vị tính <sup style="color: red;">(*)</sup></label>
               <div class="d-flex gap-2 align-items-center">
+
                 <ng-select [items]="listUnit" bindLabel="Name" bindValue="ID" [(ngModel)]="newProduct.SupplyUnitID"
-                  name="SupplyUnitID" placeholder="Chọn đơn vị" class="flex-grow-1" required >
+                  name="SupplyUnitID" placeholder="Chọn đơn vị" class="col-md-10 " required
+                  class="form-control form-control-sm p-0 border border-0 "
+                  >
                 </ng-select>
-                <button type="button" class="btn btn-outline-primary d-flex align-items-center justify-content-center"
-                  style="width: 31px; height: 31px; padding: 0;" data-bs-toggle="modal"
+                
+                <button type="button" class="btn btn-primary col-md-2 d-flex align-items-center justify-content-center"
+                style="height: 5vh;
+                padding: 0 !important;"
+                  data-bs-toggle="modal"
                   data-bs-target="#addUnitModal">
                   <i class="fa-solid fa-plus"></i>
                 </button>
               </div>
-              <div class="invalid-feedback">
+              <div class="invalid-feedback ">
                 Vui lòng chọn đơn vị tính!
               </div>
             </div>
-            <div class="col md-6">
-              <label for="Price" class="form-label">Giá sản phẩm<sup style="color: red;">(*)</sup></label>
-              <input style="text-align: right;" type="number" min="1000" class="form-control" [(ngModel)]="newProduct.Price"
+            <div class="col md-6 ">
+              <label for="Price" class="form-label ">Giá sản phẩm<sup style="color: red;">(*)</sup></label>
+              <input style="text-align: right;" type="number" min="1" class="form-control " [(ngModel)]="newProduct.Price"
                 placeholder="Nhập giá" name="Price" required>
               <div class="invalid-feedback">
                 Vui lòng nhập giá sản phẩm!
               </div>
             </div>
           </div>
-          <div class="row mb-3">
+          <div class="row mb-3 ">
             <div class="col md-6">
               <label for="RequestLimit" class="form-label">Định mức</label>
-              <input type="number" style="text-align: right;" class="form-control" min="1"
+              <input type="number" style="text-align: right;" class="form-control" min="0"
                 [(ngModel)]="newProduct.RequestLimit" placeholder="" name="RequestLimit" required>
+                <div class="invalid-feedback">
+                  Vui lòng nhập định mức!
+                </div>
             </div>
-            <div class="col md-6">
-              <label for="Type" class="form-label">Chọn loại sản phẩm<sup style="color: red;">(*)</sup></label>
+            <div class="col md-6 ">
+              <label for="Type" class="form-label ">Chọn loại sản phẩm<sup style="color: red;">(*)</sup></label>
               <ng-select [items]="typeOptions" bindLabel="name" bindValue="id" [(ngModel)]="newProduct.Type"
-                name="Type" placeholder="Chọn loại sản phẩm" required>
+                name="Type" placeholder="Chọn loại sản phẩm" required
+                class="">
               </ng-select>
-              <div class="invalid-feedback">
+              <div class="invalid-feedback ">
                 Vui lòng chọn loại sản phẩm!
               </div>
             </div>
@@ -189,8 +198,8 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Đóng</button>
-        <button type="submit" class="btn btn-outline-primary" (click)="isCheckmode? update(): add()">Lưu</button>
+        <button type="button" class="btn btn-outline-secondary p-0 ps-2 pe-2 "  data-bs-dismiss="modal">Đóng</button>
+        <button type="submit" class="btn btn-success p-0 ps-2 pe-2 " (click)="isCheckmode? update(): add()">Lưu</button>
 
       </div>
     </div>
@@ -201,7 +210,7 @@
 <div class="modal fade" id="addUnitModal" tabindex="-1" aria-labelledby="addUnitModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
-      <div  style="background-color: #caced2; text-align: center;"class="modal-header">
+      <div class="modal-header bg-primary text-white ">
         <h5 class="modal-title" id="addUnitModalLabel">Thêm đơn vị tính mới</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
@@ -209,9 +218,9 @@
         <form class="needs-validation" novalidate>
           <div class="mb-3">
           </div>
-          <div class="mb-3">
+          <div class="mb-3 ">
             <label for="unitName" class="form-label">Tên đơn vị <sup style="color: red;">(*)</sup></label>
-            <input type="text" class="form-control" id="unitName" [(ngModel)]="newUnit.Name" name="unitName" required placeholder="Nhập tên đơn vị">  
+            <input type="text" class="form-control " id="unitName" [(ngModel)]="newUnit.Name" name="unitName" required placeholder="Nhập tên đơn vị">  
             <div class="invalid-feedback">
               Vui lòng nhập tên đơn vị!
             </div>
@@ -219,8 +228,8 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button style="height: auto;" type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Đóng</button>
-        <button style="height: auto;" type="button" class="btn btn-outline-primary" (click)="addNewUnit()">Lưu</button>
+        <button type="button" class="btn btn-outline-secondary p-0 ps-2 pe-2 " data-bs-dismiss="modal">Đóng</button>
+        <button type="button" class="btn btn-success p-0 ps-2 pe-2" (click)="addNewUnit()">Lưu</button>
       </div>
     </div>
   </div>
@@ -301,10 +310,13 @@
               </div>
             </div>
           </div>
-         
           <div class="card-body p-2">
             <div id="datatableExcel" style="height: 300px; overflow-y: auto;">
             </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-outline-secondary p-0 ps-2 pe-2 "  data-bs-dismiss="modal">Đóng</button>
+            <button type="submit" class="btn btn-success p-0 ps-2 pe-2 " (click)="saveExcelData()">Lưu</button>   
           </div>
         </form>
       </div>   
