--- a/src/app/components/project-partlist-price-request/project-partlist-price-request.component.html
+++ b/src/app/components/project-partlist-price-request/project-partlist-price-request.component.html
@@ -142,36 +142,94 @@
           >
             <i class="fa-solid fa-pen-to-square me-2"></i>Sửa
           </button>
-          <button class="btn btn-outline-secondary p-0 ps-2 pe-2" (click)="OnSaveData()">
+          <button
+            class="btn btn-outline-secondary p-0 ps-2 pe-2"
+            (click)="OnSaveData()"
+          >
             <i class="fa-solid fa-floppy-disk me-2"></i>Lưu dữ liệu
           </button>
-          <button class="btn btn-outline-secondary p-0 ps-2 pe-2" (click)="CheckPrice(true)">
+          <button
+            class="btn btn-outline-secondary p-0 ps-2 pe-2"
+            (click)="CheckPrice(true)"
+          >
             <i class="fa-solid fa-list-check me-2"></i> Check giá
           </button>
-          <button class="btn btn-outline-secondary p-0 ps-2 pe-2" (click)="QuotePrice()">
-            <i class="fa-solid fa-hand-holding-dollar me-2"></i>báo giá
+          <button
+            class="btn btn-outline-secondary p-0 ps-2 pe-2"
+            (click)="QuotePrice()"
+          >
+            <i class="fa-solid fa-hand-holding-dollar me-2"></i>Báo giá
           </button>
-          <button class="btn btn-outline-secondary p-0 ps-2 pe-2" (click)="QuotePrice(1)">
+          <button
+            class="btn btn-outline-secondary p-0 ps-2 pe-2"
+            (click)="QuotePrice(1)"
+          >
             <i class="fa-solid fa-text-slash me-2"></i>Hủy báo giá
           </button>
-          <button class="btn btn-outline-secondary p-0 ps-2 pe-2" (click)="QuotePrice(3)">
+          <button
+            class="btn btn-outline-secondary p-0 ps-2 pe-2"
+            (click)="QuotePrice(3)"
+          >
             <i class="fa-solid fa-circle-check me-2"></i>Hoàn thành
           </button>
-          <button class="btn btn-outline-secondary p-0 ps-2 pe-2" (click)="QuotePrice(0)">
+          <button
+            class="btn btn-outline-secondary p-0 ps-2 pe-2"
+            (click)="QuotePrice(0)"
+          >
             <i class="fa-solid fa-circle-exclamation me-2"></i>Hủy hoàn thành
           </button>
-          <button class="btn btn-outline-secondary p-0 ps-2 pe-2" (click)="OnDeleteClick()">
+          <button
+            class="btn btn-outline-secondary p-0 ps-2 pe-2"
+            (click)="OnDeleteClick()"
+          >
             <i class="fa-solid fa-trash me-2"></i>Xóa
           </button>
-          <button class="btn btn-outline-secondary p-0 ps-2 pe-2" (click)="DownloadFile()">
+          <button
+            class="btn btn-outline-secondary p-0 ps-2 pe-2"
+            (click)="DownloadFile()"
+          >
             <i class="fa-solid fa-download me-2"></i>Tải xuống
           </button>
-          <button class="btn btn-outline-secondary p-0 ps-2 pe-2" (click)="QuotePrice()">
+          <button
+            class="btn btn-outline-secondary p-0 ps-2 pe-2"
+            (click)="QuotePrice()"
+          >
             <i class="fa-solid fa-boxes-packing me-2"></i>Thêm nhà cung cấp
           </button>
-          <button class="btn btn-outline-secondary p-0 ps-2 pe-2" (click)="ExportToExcelAdvanced()">
+          <!-- <button
+            class="btn btn-outline-secondary p-0 ps-2 pe-2"
+            (click)="ExportToExcelAdvanced()"
+          >
             <i class="fa-solid fa-table me-2"></i>Xuất excel
-          </button>
+          </button> -->
+          <div class="btn-group">
+            <button
+              class="btn btn-outline-secondary p-0 ps-2 pe-2 dropdown-toggle"
+              type="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              <i class="fa-solid fa-table me-2"></i>Xuất Excel
+            </button>
+            <ul class="dropdown-menu">
+              <li>
+                <a class="btn dropdown-item" (click)="ExportToExcelAdvanced()">
+                  <i class="fa-solid fa-check me-2"></i>Theo dòng đã chọn
+                </a>
+              </li>
+              <li>
+                <a class="btn dropdown-item" (click)="ExportToExcelTab()">
+                  <i class="fa-solid fa-file-lines me-2"></i>Trang hiện tại
+                </a>
+              </li>
+              <li>
+                <a class="btn dropdown-item" (click)="ExportAllTabsToExcel()">
+                  <i class="fa-solid fa-globe me-2"></i>Tất cả
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
       <div class="card-body">
         <div class="custom-tabs-container">
@@ -210,7 +268,7 @@
               <div class="p-1">
                 <div
                   [id]="'datatable-' + type.ProjectTypeID"
-                  class="tabulator-container"
+                  class="tabulator-container container-fluid p-0"
                 ></div>
               </div>
             </div>
