update giao dien, hoan thien 1 so chuc nang

--- a/src/app/components/VPP/OfficeSupplies/office-supplies.component.css
+++ b/src/app/components/VPP/OfficeSupplies/office-supplies.component.css
@@ -88,3 +88,7 @@
     line-height: 22px;
 }
 /* cap nhat */
+/* Đảm bảo thanh tiến trình luôn hiển thị văn bản bên trong */
+
+
+/* Optional: Đảm bảo vùng chứa progress bar có đủ không gian và nền rõ ràng */
