--- a/src/app/components/VPP/OfficeSupplies/office-supplies.component.html
+++ b/src/app/components/VPP/OfficeSupplies/office-supplies.component.html
@@ -6,7 +6,7 @@
     data-bs-backdrop="false"
   >
     <div class="offcanvas-header pt-0 mt-2 pb-0 mb-2">
-      <h5 class="offcanvas-title ">Tìm kiếm</h5>
+      <h6 class="offcanvas-title ">Tìm kiếm</h6>
       <button
         type="button"
         class="btn-close text-reset "
@@ -79,8 +79,11 @@
                 </button>
               </div>
               
-              <div class="d-flex gap-2 align-items-center">
-                <input type="text" class="form-control form-control-sm " [(ngModel)]="searchText" (input)="onSearchChange($event)" placeholder="Tìm kiếm...">
+              <div class="d-flex gap-2 align-items-center " style="width: 500px; ">
+                <input type="text" class="form-control form-control-sm fs-12" [(ngModel)]="searchText" (input)="onSearchChange($event)" placeholder="Tìm kiếm..."
+              style="font-style: italic;"
+                >
+                
               </div>
             </div>
 
@@ -99,20 +102,20 @@
   aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
-      <div  class="modal-header  bg-primary text-white" >
-        <h5 class="modal-title" id="addProductModalLabel">Chi tiết sản phẩm</h5>
+      <div  class="modal-header  bg-primary text-white text-uppercase" >
+       <h6 class="modal-title" id="addProductModalLabel">Chi tiết sản phẩm</h6>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <form class="row g-3 needs-validation was-validated" novalidate>
-          <div class="row mb-1">
-            <div class="col-md-6">
-              <label for="CodeRTC" class="form-label">Mã RTC <sup style="color: red;">(*)</sup></label>
-              <input type="text" class="form-control " [(ngModel)]="newProduct.CodeRTC" name="CodeRTC" readonly>
+          <div class="row">
+            <div class="col-md-6 pb-3">
+              <label for="CodeRTC" class="form-label fs-12">Mã RTC <sup style="color: red;"> (*)</sup></label>
+              <input type="text" class="form-control fs-12 " [(ngModel)]="newProduct.CodeRTC" name="CodeRTC" readonly>
             </div>
-            <div class="col-md-6 ">
-              <label for="CodeNCC" class="form-label">Mã NCC <sup style="color: red;">(*)</sup></label>
-              <input type="text" class="form-control " [(ngModel)]="newProduct.CodeNCC" name="CodeNCC"
+            <div class="col-md-6 pb-3">
+              <label for="CodeNCC" class="form-label fs-12">Mã NCC <sup style="color: red;"> (*)</sup></label>
+              <input type="text" class="form-control fs-12 " [(ngModel)]="newProduct.CodeNCC" name="CodeNCC"
                 placeholder="Nhập mã NCCC" required>
               <div class="invalid-feedback">
                 Vui lòng nhập mã NCC!
@@ -120,21 +123,21 @@
             </div>
           </div>
 
-          <div class="row mb-3">
+          <div class="row">
             <div>
-              <div class="col md-12">
-                <label for="NameRTC" class="form-label">Tên RTC <sup style="color: red;">(*)</sup></label>
-                <input type="text" class="form-control" [(ngModel)]="newProduct.NameRTC" name="NamRTC"
+              <div class="col md-12 pb-3">
+                <label for="NameRTC" class="form-label fs-12">Tên RTC <sup style="color: red;"> (*)</sup></label>
+                <input type="text" class="form-control fs-12" [(ngModel)]="newProduct.NameRTC" name="NamRTC"
                   placeholder="Nhập tên RTC">
               </div>
             </div>
 
           </div>
-          <div class="row mb-3">
+          <div class="row">
             <div>
-              <div class="col md-12">
-                <label for="NameNCC" class="form-label">Tên NCC <sup style="color: red;">(*)</sup></label>
-                <input type="text" class="form-control" [(ngModel)]="newProduct.NameNCC" name="NameNCC"
+                <div class="col md-12 pb-3">
+                <label for="NameNCC" class="form-label fs-12">Tên NCC <sup style="color: red;"> (*)</sup></label>
+                <input type="text" class="form-control fs-12" [(ngModel)]="newProduct.NameNCC" name="NameNCC"
                   placeholder="Nhập tên NCC" required>
                 <div class="invalid-feedback">
                   Vui lòng nhập tên nhà cung cấp!
@@ -143,32 +146,31 @@
             </div>
           </div>
 
-          <div class="row mb-3">
-            <div class="col md-6 ">
-              <label for="SupplyUnitID" class="form-label">Đơn vị tính <sup style="color: red;">(*)</sup></label>
+          <div class="row">
+              <div class="col md-6 pb-3 ">
+              <label for="SupplyUnitID" class="form-label fs-12">Đơn vị tính <sup style="color: red;"> (*)</sup></label>
               <div class="d-flex gap-2 align-items-center">
 
                 <ng-select [items]="listUnit" bindLabel="Name" bindValue="ID" [(ngModel)]="newProduct.SupplyUnitID"
                   name="SupplyUnitID" placeholder="Chọn đơn vị" class="col-md-10 " required
-                  class="form-control form-control-sm p-0 border border-0 "
+                  class="form-control form-control-sm p-0 border border-0 fs-12 "
                   >
                 </ng-select>
                 
-                <button type="button" class="btn btn-primary col-md-2 d-flex align-items-center justify-content-center"
-                style="height: 5vh;
-                padding: 0 !important;"
+                <button type="button" class="btn btn-outline-primary col-md-2 d-flex align-items-center justify-content-center"
+                
                   data-bs-toggle="modal"
                   data-bs-target="#addUnitModal">
-                  <i class="fa-solid fa-plus"></i>
+                  <i class="fa-solid fa-plus" ></i>
                 </button>
               </div>
               <div class="invalid-feedback ">
                 Vui lòng chọn đơn vị tính!
               </div>
             </div>
-            <div class="col md-6 ">
-              <label for="Price" class="form-label ">Giá sản phẩm<sup style="color: red;">(*)</sup></label>
-              <input style="text-align: right;" type="number" min="1" class="form-control " [(ngModel)]="newProduct.Price"
+            <div class="col md-6 pb-4">
+              <label for="Price" class="form-label fs-12 ">Giá sản phẩm<sup style="color: red;"> (*)</sup></label>
+              <input style="text-align: right;" type="number" min="1" class="form-control fs-12 " [(ngModel)]="newProduct.Price"
                 placeholder="Nhập giá" name="Price" required>
               <div class="invalid-feedback">
                 Vui lòng nhập giá sản phẩm!
@@ -176,19 +178,19 @@
             </div>
           </div>
           <div class="row mb-3 ">
-            <div class="col md-6">
-              <label for="RequestLimit" class="form-label">Định mức</label>
-              <input type="number" style="text-align: right;" class="form-control" min="0"
+            <div class="col md-6 pb-4">
+              <label for="RequestLimit" class="form-label fs-12">Định mức</label>
+              <input type="number" style="text-align: right;" class="form-control fs-12" min="0"
                 [(ngModel)]="newProduct.RequestLimit" placeholder="" name="RequestLimit" required>
                 <div class="invalid-feedback">
                   Vui lòng nhập định mức!
                 </div>
             </div>
-            <div class="col md-6 ">
-              <label for="Type" class="form-label ">Chọn loại sản phẩm<sup style="color: red;">(*)</sup></label>
+            <div class="col md-6">
+              <label for="Type" class="form-label fs-12 ">Chọn loại sản phẩm<sup style="color: red;"> (*)</sup></label>
               <ng-select [items]="typeOptions" bindLabel="name" bindValue="id" [(ngModel)]="newProduct.Type"
                 name="Type" placeholder="Chọn loại sản phẩm" required
-                class="">
+                class="fs-12">
               </ng-select>
               <div class="invalid-feedback ">
                 Vui lòng chọn loại sản phẩm!
@@ -199,7 +201,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-secondary p-0 ps-2 pe-2 "  data-bs-dismiss="modal">Đóng</button>
-        <button type="submit" class="btn btn-success p-0 ps-2 pe-2 " (click)="isCheckmode? update(): add()">Lưu</button>
+        <button type="submit" class="btn btn-success p-0 ps-2 pe-2 " (click)="isCheckmode? update(): add()">Lưu thay đổi</button>
 
       </div>
     </div>
@@ -210,8 +212,8 @@
 <div class="modal fade" id="addUnitModal" tabindex="-1" aria-labelledby="addUnitModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
-      <div class="modal-header bg-primary text-white ">
-        <h5 class="modal-title" id="addUnitModalLabel">Thêm đơn vị tính mới</h5>
+      <div class="modal-header bg-primary text-white text-uppercase ">
+       <h6 class="modal-title" id="addUnitModalLabel">Thêm đơn vị tính mới</h6>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -219,7 +221,7 @@
           <div class="mb-3">
           </div>
           <div class="mb-3 ">
-            <label for="unitName" class="form-label">Tên đơn vị <sup style="color: red;">(*)</sup></label>
+            <label for="unitName" class="form-label fs-12">Tên đơn vị <sup style="color: red;"> (*)</sup></label>
             <input type="text" class="form-control " id="unitName" [(ngModel)]="newUnit.Name" name="unitName" required placeholder="Nhập tên đơn vị">  
             <div class="invalid-feedback">
               Vui lòng nhập tên đơn vị!
@@ -229,7 +231,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-secondary p-0 ps-2 pe-2 " data-bs-dismiss="modal">Đóng</button>
-        <button type="button" class="btn btn-success p-0 ps-2 pe-2" (click)="addNewUnit()">Lưu</button>
+        <button type="button" class="btn btn-success p-0 ps-2 pe-2" (click)="addNewUnit()">Lưu thay đỏi</button>
       </div>
     </div>
   </div>
@@ -243,8 +245,8 @@
 <div class="modal fade" id="officeSupplyUnitModal" tabindex="-1" aria-labelledby="officeSupplyUnitModalLabel"  aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="addUnitModalLabel">Danh sách đơn vị tính</h5>
+      <div class="modal-header bg-primary text-white text-uppercase ">
+       <h6 class="modal-title" id="addUnitModalLabel">Danh sách đơn vị tính</h6>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -271,39 +273,39 @@
 <div class="modal fade" id="ExcelModal" tabindex="-1" aria-labelledby="ExcelModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="ExcelModalLabel">NHẬP KHẨU EXCEL</h5>
+      <div class="modal-header  bg-success text-white text-uppercase ">
+       <h6 class="modal-title" id="ExcelModalLabel">NHẬP DỮ LIỆU EXCEL</h6>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <div class="d-flex gap-2 align-items-center p-2">
-          <button style="font-size: 1rem;height: 5vh;" type="button" class="btn btn-success" (click)="saveExcelData()">Cất</button>
-          <button style="font-size: 1rem;height: 5vh; word-wrap:normal;" type="button" class="btn btn-secondary">Mẫu Excel</button>
           <div class="flex-grow-1">
-            <div class="progress" style="height: 5vh;">
-              <div class="progress-bar" role="progressbar" [style.width.%]="uploadProgress" [attr.aria-valuenow]="uploadProgress" aria-valuemin="0" aria-valuemax="100">
-                {{uploadProgress}}%
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" [style.width.%]="displayProgress" [attr.aria-valuenow]="displayProgress" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-text-overlay fs-12 text-black" style="
+                  text-align: center; position: absolute; width: 100%;">
+                  {{displayText}}
+                </div>
               </div>
             </div>
           </div>
         </div>
         <form class="needs-validation" novalidate>
           <div class="d-flex flex-column gap-2 p-2">
-            <div class="fw-bold" style="background-color: #caced2;">Thông tin</div>
             <div class="d-flex gap-2 align-items-center">
               <div class="d-flex align-items-center gap-2" style="flex: 2;">
-                <label class="mb-0" style="white-space: nowrap; min-width: 80px;">Đường dẫn:</label>
+                <label class="mb-0 fs-12" style="white-space: nowrap;">Đường dẫn:</label>
                 <div class="d-flex gap-2 flex-grow-1">
-                  <input type="text" class="form-control form-control-sm" placeholder="Đường dẫn" name="path" id="pathInput" [(ngModel)]="filePath" readonly>
-                  <input type="file" class="d-none" id="fileInput" accept=".xlsx,.xls" (change)="onFileSelected($event)">
-                  <button type="button" class="btn btn-outline-secondary btn-sm" (click)="openFileExplorer()">
+                  <input type="text" class="form-control form-control-sm fs-12" placeholder="Đường dẫn" name="path" id="pathInput" [(ngModel)]="filePath" readonly>
+                  <input type="file" class="d-none fs-12" id="fileInput" accept=".xlsx,.xls" (change)="onFileSelected($event)">
+                  <button type="button" class="btn btn-warning  btn-sm" (click)="openFileExplorer()" style="height: auto;">
                     <i class="fas fa-folder-open"></i>
                   </button>
                 </div>
               </div>
               <div class="d-flex align-items-center gap-2" style="flex: 1;">
-                <label class="mb-0" style="white-space: nowrap; min-width: 80px;">Tên Sheet:</label>
-                <select class="form-select form-select-sm" name="sheet" id="sheetSelect" [(ngModel)]="selectedSheet" (change)="onSheetChange()">
+                <label class="mb-0 fs-12" style="white-space: nowrap;">Tên Sheet:</label>
+                <select class="form-select form-select-sm fs-12" name="sheet" id="sheetSelect" [(ngModel)]="selectedSheet" (change)="onSheetChange()">
                   <option value="">Chọn Sheet</option>
                   <option *ngFor="let sheet of excelSheets" [value]="sheet">{{sheet}}</option>
                 </select>
@@ -316,7 +318,8 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-outline-secondary p-0 ps-2 pe-2 "  data-bs-dismiss="modal">Đóng</button>
-            <button type="submit" class="btn btn-success p-0 ps-2 pe-2 " (click)="saveExcelData()">Lưu</button>   
+            <button  type="button" class="btn btn-info p-0 ps-2 pe-2">Mẫu Excel</button>
+            <button type="submit" class="btn btn-success p-0 ps-2 pe-2 " (click)="saveExcelData()">Lưu thay đổi</button>   
           </div>
         </form>
       </div>   
