--- a/src/app/components/VPP/OfficeSupplyRequestSummary/office-supply-request-summary/office-supply-request-summary.component.html
+++ b/src/app/components/VPP/OfficeSupplyRequestSummary/office-supply-request-summary/office-supply-request-summary.component.html
@@ -1,59 +1,57 @@
 <div class="layout-wrapper d-flex" style="height: 100%">
     <div class="offcanvas offcanvas-left custom-offcanvas" tabindex="-1" id="searchOffcanvas" data-bs-backdrop="false">
        <div class="offcanvas-header">
-         <h5 class="offcanvas-title">Tìm kiếm</h5>
+         <h6 class="offcanvas-title">Tìm kiếm</h6>
          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
        </div>
        <div class="offcanvas-body">
          <!-- Năm -->
          <div class="form-group">
-           <label for="txtYear">Năm</label>
+           <label for="txtYear" class="fs-12">Năm</label>
            <input type="number" id="txtYear" 
              min="2024" max="9999" 
              [(ngModel)]="searchParams.year"
          
-             class="form-control form-control-sm">
+             class="form-control fs-12 form-control-sm">
          </div>
    
          <!-- Tháng -->
          <div class="form-group">
-           <label for="txtMonth">Tháng</label>
+           <label for="txtMonth" class="fs-12">Tháng</label>
            <input type="number" id="txtMonth" 
              min="1" max="12" 
              [(ngModel)]="searchParams.month"
            
-             class="form-control form-control-sm">
+             class="form-control fs-12 form-control-sm">
          </div>
    
          <!-- Phòng ban -->
          <div class="form-group">
-           <label for="cboDepartment">Phòng ban</label>
-          <ng-select id="cboDepartment" class="department-select" [items]="dataDeparment" bindLabel="Name"
+           <label for="cboDepartment" class="fs-12">Phòng ban</label>
+          <ng-select  id="cboDepartment" class="department-select" [items]="dataDeparment" bindLabel="Name"
                    [bindValue]="'ID'" [(ngModel)]="searchParams.departmentId" 
                    placeholder="Chọn phòng ban">
                    <ng-template ng-header-tmp>       
-                       <div class="row font-weight-bold text-center">
+                       <div class="row fs-12 font-weight-bold text-center">
                            <div class="col-4" style="font-weight: bold;">Mã phòng ban</div>
                            <div class="col-4" style="font-weight: bold;">Tên phòng ban</div>
                        </div>
                    </ng-template>
                    <ng-template ng-option-tmp let-item="item">
                        <div class="row text-center">
-                           <div class="col-4">{{ item.Code}}</div>
-                           <div class="col-4">{{ item.Name }}</div>
+                           <div class="col-4 fs-12">{{ item.Code}}</div>
+                           <div class="col-4 fs-12">{{ item.Name }}</div>
                        </div>
                    </ng-template>
                </ng-select>
          </div>
-         <div class="form-group">
-              <div class="button-group">
-                <button class="btn btn-outline-primary p-0 ps-2 pe-2" type="button" data-bs-toggle="offcanvas" 
-                  data-bs-target="#searchOffcanvas" (click)="search()">Tìm kiếm
-                 
-                </button>
-              </div>
-            </div>
-   
+         <div class="offcanvas-bottom pt-0 pb-1">
+          <div class="col-12 ps-3 pe-3">
+            <button class="btn btn-success col-12 fs-10 d-flex align-items-center justify-content-center"  data-bs-dismiss="offcanvas" (click)="search()">
+              Tìm kiếm
+            </button>
+          </div>
+        </div>
          <!-- Buttons -->
        </div>
      </div>
@@ -71,7 +69,7 @@
                          data-bs-toggle="offcanvas"
                          data-bs-target="#searchOffcanvas"
                        >
-                         <i class="fas fa-search"></i> Tìm kiếm
+                         <i class="fas fa-search  p-0 ps-2 pe-2"></i> 
                        </button>
                       <button class="btn btn-outline-secondary p-0 ps-2 pe-2" id="btnNew" (click)="exportToExcel()">
              <i class="fa-solid fa-file-excel"></i>  Xuất Excel
