--- a/src/app/components/VPP/OfficeSupplyRequests/office-supply-requests.component.html
+++ b/src/app/components/VPP/OfficeSupplyRequests/office-supply-requests.component.html
@@ -1,40 +1,40 @@
 <div class="layout-wrapper d-flex" style="height: 100%">
   <div class="offcanvas offcanvas-left custom-offcanvas" tabindex="-1" id="searchOffcanvas" data-bs-backdrop="false">
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title">Tìm kiếm</h5>
+      <h6 class="offcanvas-title">Tìm kiếm</h6>
       <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
       <!-- Năm -->
       <div class="form-group">
-        <label for="txtYear">Năm</label>
+        <label class="fs-12" for="txtYear ">Năm</label>
         <input type="number" id="txtYear" min="2024" max="9999" [(ngModel)]="searchParams.year"
-          (change)="onYearChange($event)" class="form-control form-control-sm">
+          (change)="onYearChange($event)" class="form-control fs-12 form-control-sm">
       </div>
 
       <!-- Tháng -->
       <div class="form-group">
-        <label for="txtMonth">Tháng</label>
+        <label for="txtMonth" class="fs-12">Tháng</label>
         <input type="number" id="txtMonth" min="1" max="12" [(ngModel)]="searchParams.month"
-          (change)="onMonthChange($event)" class="form-control form-control-sm">
+          (change)="onMonthChange($event)" class="form-control fs-12 form-control-sm">
       </div>
 
       <!-- Phòng ban -->
       <div class="form-group">
-        <label for="cboDepartment">Phòng ban</label>
-        <ng-select id="cboDepartment" class="department-select" [items]="dataDeparment" bindLabel="Name"
+        <label class="fs-12" for="cboDepartment">Phòng ban</label>
+        <ng-select id="cboDepartment" class="department-select fs-12" [items]="dataDeparment" bindLabel="Name"
           [bindValue]="'ID'" [(ngModel)]="searchParams.departmentId" (change)="onDepartmentChange($event)"
           placeholder="Chọn phòng ban">
           <ng-template ng-header-tmp>
             <div class="row font-weight-bold text-center">
-              <div class="col-4" style="font-weight: bold;">Mã phòng ban</div>
-              <div class="col-4" style="font-weight: bold;">Tên phòng ban</div>
+              <div class="col-4 fs-12" style="font-weight: bold;">Mã phòng ban</div>
+              <div class="col-4 fs-12" style="font-weight: bold;">Tên phòng ban</div>
             </div>
           </ng-template>
           <ng-template ng-option-tmp let-item="item">
             <div class="row text-center">
-              <div class="col-4">{{ item.Code}}</div>
-              <div class="col-4">{{ item.Name }}</div>
+              <div class="col-4 fs-12">{{ item.Code}}</div>
+              <div class="col-4 fs-12">{{ item.Name }}</div>
             </div>
           </ng-template>
         </ng-select>
@@ -42,12 +42,18 @@
 
       <!-- Từ khóa -->
       <div class="form-group">
-        <label for="txtSearch">Từ khóa</label>
-        <input type="text" id="txtSearch" class="form-control form-control-sm" [(ngModel)]="searchParams.keyword"
+        <label for="txtSearch " class="fs-12">Từ khóa</label>
+        <input type="text" id="txtSearch" class="form-control fs-12 form-control-sm" [(ngModel)]="searchParams.keyword"
           (input)="onKeywordChange($event)" placeholder="Nhập từ khóa...">
       </div>
 
-      <!-- Buttons -->
+      <div class="offcanvas-bottom pt-0 pb-1">
+        <div class="col-12 ps-3 pe-3">
+          <button class="btn btn-success col-12 fs-10 d-flex align-items-center justify-content-center"  data-bs-dismiss="offcanvas" >
+            Tìm kiếm
+          </button>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -59,7 +65,7 @@
             <div class="d-flex justify-content-start">
               <button type="button" class="btn btn-outline-secondary p-0 ps-2 pe-2" title="Tìm kiếm"
                 data-bs-toggle="offcanvas" data-bs-target="#searchOffcanvas">
-                <i class="fas fa-search"></i> Tìm kiếm
+                <i class="fas fa-search  p-0 ps-2 pe-2"></i>
               </button>
               <button class="btn btn-outline-secondary p-0 ps-2 pe-2" id="btnNew">
                 <i class="fa-solid fa-plus"></i> Thêm
@@ -89,10 +95,10 @@
             </div>
 
             <div class="card-body p-0">
-              DANH SÁCH ĐĂNG KÝ VĂN PHÒNG PHẤM
-              <div id="datatable1" class="custom-tabulator"  style="border: solid 2px rgb(84,102,212);"></div>
-             CHI TIẾT VĂN PHÒNG PHẨM
-              <div id="datatable2" class="custom-tabulator" style="border: solid 2px rgb(84,102,212);"></div>
+             <!-- <p class="card-header">DANH SÁCH ĐĂNG KÝ VĂN PHÒNG PHẨM</p> -->
+              <div id="datatable1" class="custom-tabulator" ></div>
+             <!-- <p class="card-header">CHI TIẾT VĂN PHÒNG PHẨM</p> -->
+              <div id="datatable2" class="custom-tabulator mt-2"></div>
             </div>
           </div>
         </div>
