--- a/src/app/components/departments/department-form/department-form.component.css
+++ b/src/app/components/departments/department-form/department-form.component.css
@@ -10,4 +10,64 @@
     height: 2.5vh;
     font-size: 0.75rem;
     border: none;
+    font-weight: bold;
   }
+  .modal-header {
+    padding: 0.5rem;
+  }
+
+  .ng-select .ng-select-container {
+  border-radius: 0.25rem;
+  border: 1px solid #ced4da;
+  min-height: 38px;
+}
+
+.ng-select.ng-select-focused:not(.ng-select-opened) > .ng-select-container {
+  border-color: #86b7fe;
+  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+}
+
+.ng-select .ng-select-container .ng-value-container {
+  padding: 0.375rem 0.75rem;
+}
+
+
+
+::ng-deep .ng-dropdown-panel .ng-option:hover {
+  background-color: #72a7e2 !important;
+  color: #333;
+}
+
+::ng-deep .ng-dropdown-panel .scroll-host {
+  top: 5px;
+  right: 15px;
+  width: 480px;
+}
+
+::ng-deep ng-select.form-control .ng-clear-wrapper {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+
+::ng-deep ng-select.form-control .ng-clear-wrapper:hover {
+  color: #d9363e;
+}
+
+::ng-deep .ng-select.ng-select-multiple .ng-select-container .ng-value-container .ng-value {
+    margin-top: 3px;
+    margin-right: 1px;
+    font-size: .75rem;
+    background-color: #fafafa;
+    border: none;
+    border-radius: 2px;
+    height: 24px;
+    line-height: 22px;
+}
+::ng-deep ng-select .ng-value-container {
+  display: flex !important;
+  flex-wrap: nowrap !important;
+  overflow-x: auto !important;
+  white-space: nowrap !important;
+}
+
