--- a/src/app/components/departments/department-form/department-form.component.html
+++ b/src/app/components/departments/department-form/department-form.component.html
@@ -1,83 +1,87 @@
-<div class="d-flex justify-content-between">
-    <div class="toolbar mb-2 d-flex align-items-center gap-2 justify-content-start"> 
-        <button type="button" class="btn btn-outline-secondary rounded px-3 d-flex align-items-center gap-2" title="Thêm mới" (click)="openAddModal()">
-            <i class="fas fa-plus"></i>
-            <span>Thêm</span>
-        </button>
-        <button type="button" class="btn btn-outline-secondary rounded px-3 d-flex align-items-center gap-2" title="Sửa" (click)="openEditModal()">
-            <i class="fas fa-pen"></i>
-            <span>Sửa</span>
-        </button>
-        <button type="button" class="btn btn-outline-secondary rounded px-3 d-flex align-items-center gap-2" title="Xóa" (click)="openDeleteModal()">
-            <i class="fas fa-trash"></i>
-            <span>Xóa</span>
-        </button>
-    </div>
+<div class="d-flex align-items-center justify-content-start">
+    <button type="button" class="btn btn-outline-secondary rounded d-flex align-items-center gap-2" title="Thêm mới"
+        (click)="openAddModal()">
+        <i class="fas fa-plus"></i>
+        <span>Thêm</span>
+    </button>
+    <button type="button" class="btn btn-outline-secondary rounded d-flex align-items-center gap-2" title="Sửa"
+        (click)="openEditModal()">
+        <i class="fas fa-pen"></i>
+        <span>Sửa</span>
+    </button>
+    <button type="button" class="btn btn-outline-secondary rounded d-flex align-items-center gap-2" title="Xóa"
+        (click)="openDeleteModal()">
+        <i class="fas fa-trash"></i>
+        <span>Xóa</span>
+    </button>
 </div>
 <div class="col-xl-12">
     <div id="department-table"></div>
 </div>
 
 <!-- Modal Thêm/Sửa ngành nghề -->
-<div class="modal fade" id="addDepartmentModal" tabindex="-1" aria-labelledby="addDepartmentModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+<div class="modal fade" id="addDepartmentModal" tabindex="-1" aria-labelledby="addDepartmentModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-            <div class="modal-header">
-                <h6 class="modal-title" id="addDepartmentModalLabel">{{isEditMode ? 'Sửa phòng ban' : 'Thêm phòng ban mới'}}</h6>
+            <div class="modal-header bg-primary text-white">
+                <h6 class="modal-title text-uppercase" id="addDepartmentModalLabel">{{isEditMode ? 'Sửa phòng ban' :
+                    'Thêm phòng ban mới'}}</h6>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <form #departmentForm="ngForm" (ngSubmit)="onSubmit(departmentForm)">
                     <div class="mb-3 fs-12">
-                        <label for="stt" class="form-label">Số thứ tự <span class="text-danger">*</span></label>
-                        <input type="number" class="form-control fs-12" id="stt" name="stt" [(ngModel)]="department.STT" required #stt="ngModel" [readonly]="true">
+                        <label for="stt" class="form-label">Số thứ tự <span class="text-danger">(*)</span></label>
+                        <input type="number" class="form-control fs-12" id="stt" name="stt" [(ngModel)]="department.STT"
+                            required #stt="ngModel" [readonly]="true">
                     </div>
                     <div class="mb-3 fs-12">
-                        <label for="code" class="form-label">Mã phòng ban <span class="text-danger">*</span></label>
-                        <input type="text" class="form-control fs-12" id="code" name="code" [(ngModel)]="department.Code" required #code="ngModel">
-                        <div class="text-danger" *ngIf="code.invalid && (code.dirty || code.touched)">
-                            Vui lòng nhập mã phòng ban
-                        </div>
+                        <label for="code" class="form-label">Mã phòng ban <span class="text-danger">(*)</span></label>
+                        <input type="text" class="form-control fs-12" id="code" name="code"
+                            [(ngModel)]="department.Code" required #code="ngModel">
                     </div>
                     <div class="mb-3 fs-12">
-                        <label for="name" class="form-label">Tên phòng ban <span class="text-danger">*</span></label>
-                        <input type="text" class="form-control fs-12" id="name" name="name" [(ngModel)]="department.Name" required #name="ngModel">
-                        <div class="text-danger" *ngIf="name.invalid && (name.dirty || name.touched)">
-                            Vui lòng nhập tên phòng ban
-                        </div>
+                        <label for="name" class="form-label">Tên phòng ban <span class="text-danger">(*)</span></label>
+                        <input type="text" class="form-control fs-12" id="name" name="name"
+                            [(ngModel)]="department.Name" required #name="ngModel">
                     </div>
                     <div class="mb-3 fs-12">
                         <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control fs-12" id="email" name="email" [(ngModel)]="department.Email" #email="ngModel">
+                        <input type="email" class="form-control fs-12" id="email" name="email"
+                            [(ngModel)]="department.Email" #email="ngModel">
                     </div>
                     <div class="mb-3 fs-12">
-                        <label for="headofdepartment" class="form-label">Trưởng phòng</label>
-                        <ng-select
-                            id="headofdepartment"
-                            [(ngModel)]="department.HeadofDepartment"
-                            name="headofdepartment"
-                            [items]="employeeList"
-                            [clearable]="false"
-                            bindLabel="FullName"
-                            bindValue="ID"
-                            placeholder="Chọn trưởng phòng"
-                            [searchable]="true"
-                            [virtualScroll]="true"
-                            class="form-select fs-12"
-                            style="padding: 0.375rem 0.75rem; height: 38px;"
-                            #headofdepartment="ngModel"
-                            required>
-                        <ng-template ng-option-tmp let-item="item">
-                            {{item.Code}} - {{item.FullName}}
-                        </ng-template>
+                        <label for="headofdepartment" class="form-label">Trưởng phòng <span
+                                class="text-danger">(*)</span></label>
+                        <!-- <ng-select id="headofdepartment" [(ngModel)]="department.HeadofDepartment"
+                            name="headofdepartment" [items]="employeeList" [clearable]="false" bindLabel="FullName"
+                            bindValue="ID" placeholder="Chọn trưởng phòng" [searchable]="true" [virtualScroll]="true"
+                            class="form-select fs-12 bg-white" style="padding: 0.375rem 0.75rem; height: 38px;"
+                            #headofdepartment="ngModel" required>
+                            <ng-template ng-option-tmp let-item="item">
+                                {{item.Code}} - {{item.FullName}}
+                            </ng-template>
+                        </ng-select> -->
+                        <ng-select [(ngModel)]="department.HeadofDepartment" name="headofdepartment" [items]="employeeList"
+                            bindLabel="FullName" bindValue="ID" placeholder="-- Chọn nhân viên --"
+                            [searchable]="true" [virtualScroll]="true" class="fs-12">
+                            <ng-template ng-option-tmp let-item="item">
+                                <div class="row text-dark w-100 fs-12">
+                                    <div class="col-3 ms-1">
+                                        <span class="fs-12">{{ item.Code }} - {{ item.FullName }}</span>
+                                    </div>
+                                </div>
+                            </ng-template>
+                            <ng-template ng-label-tmp let-item="item">
+                                <span class="fs-12">{{ item.FullName }}</span>
+                            </ng-template>
                         </ng-select>
-                        <div class="text-danger" *ngIf="headofdepartment.invalid && (headofdepartment.dirty || headofdepartment.touched)">
-                            Vui lòng chọn trưởng phòng
-                        </div>
                     </div>
-                    <div class="mb-3 fs-12">  
-                        <label for="status" class="form-label">Trạng thái <span class="text-danger">*</span></label>
-                        <select class="form-select fs-12" id="status" name="status" [(ngModel)]="department.Status" required #status="ngModel">
+                    <div class="mb-3 fs-12">
+                        <label for="status" class="form-label">Trạng thái <span class="text-danger">(*)</span></label>
+                        <select class="form-select fs-12" id="status" name="status" [(ngModel)]="department.Status"
+                            required #status="ngModel">
                             <option value="1">Hoạt động</option>
                             <option value="0">Ngừng hoạt động</option>
                         </select>
@@ -85,33 +89,37 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" style="height: 3vh;">Hủy</button>
-                <button type="button" class="btn btn-primary" (click)="onSubmit(departmentForm)" style="height: 3vh;">Lưu</button>
+                <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal"
+                    style="height: 3vh; border: 1px solid;">Đóng</button>
+                <button type="button" class="btn btn-success" (click)="onSubmit(departmentForm)"
+                    style="height: 3vh;">Lưu thay đổi</button>
             </div>
         </div>
     </div>
 </div>
 
 <!-- Modal Thông báo -->
-<div class="modal fade" id="notificationModal" tabindex="-1" aria-labelledby="notificationModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="notificationModalLabel">{{isSuccess ? 'Thành công' : 'Thông báo'}}</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        {{toastMessage}}
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Đóng</button>
-      </div>
+<div class="modal fade" id="notificationModal" tabindex="-1" aria-labelledby="notificationModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="notificationModalLabel">{{isSuccess ? 'Thành công' : 'Thông báo'}}</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                {{toastMessage}}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Đóng</button>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
 <!-- Modal Xác nhận xóa -->
-<div class="modal fade" id="deleteConfirmModal" tabindex="-1" aria-labelledby="deleteConfirmModalLabel" aria-hidden="true">
+<div class="modal fade" id="deleteConfirmModal" tabindex="-1" aria-labelledby="deleteConfirmModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
