--- a/src/app/components/teams/team-form/team-form.component.html
+++ b/src/app/components/teams/team-form/team-form.component.html
@@ -1,22 +1,25 @@
 <!-- Button Thêm, sửa, xóa -->
 <div class="d-flex justify-content-between">
-  <div class="toolbar mb-2 d-flex align-items-center gap-2 justify-content-start"> 
-      <button type="button" class="btn btn-outline-secondary rounded px-3 d-flex align-items-center gap-2" title="Thêm mới" (click)="openAddModal()">
-          <i class="fas fa-plus"></i>
-          <span>Thêm</span>
-      </button>
-      <button type="button" class="btn btn-outline-secondary rounded px-3 d-flex align-items-center gap-2" title="Sửa" (click)="openEditModal()">
-          <i class="fas fa-pen"></i>
-          <span>Sửa</span>
-      </button>
-      <button type="button" class="btn btn-outline-secondary rounded px-3 d-flex align-items-center gap-2" title="Xóa" (click)="openDeleteModal()">
-          <i class="fas fa-trash"></i>
-          <span>Xóa</span>
-      </button>
-      <button type="button" class="btn btn-outline-secondary rounded px-3 d-flex align-items-center gap-2" title="Refresh">
-          <i class="fas fa-sync-alt"></i>
-          <span>Refresh</span>
-      </button>
+  <div class="d-flex align-items-center justify-content-start">
+    <button type="button" class="btn btn-outline-secondary rounded d-flex align-items-center gap-2" title="Thêm mới"
+      (click)="openAddModal()">
+      <i class="fas fa-plus"></i>
+      <span>Thêm</span>
+    </button>
+    <button type="button" class="btn btn-outline-secondary rounded d-flex align-items-center gap-2" title="Sửa"
+      (click)="openEditModal()">
+      <i class="fas fa-pen"></i>
+      <span>Sửa</span>
+    </button>
+    <button type="button" class="btn btn-outline-secondary rounded d-flex align-items-center gap-2" title="Xóa"
+      (click)="openDeleteModal()">
+      <i class="fas fa-trash"></i>
+      <span>Xóa</span>
+    </button>
+    <button type="button" class="btn btn-outline-secondary rounded d-flex align-items-center gap-2" title="Refresh">
+      <i class="fas fa-sync-alt"></i>
+      <span>Refresh</span>
+    </button>
   </div>
 </div>
 <!-- End Button Thêm, sửa, xóa -->
@@ -26,34 +29,33 @@
   <div class="col-lg-6">
     <div class="d-flex align-items-center mb-2">
       <label for="" class="form-label col-lg-2 text-center m-0 fs-12">Phòng ban</label>
-      <ng-select
-          id="department"
-          [(ngModel)]="department"
-          name="department"
-          [items]="departmentList"
-          bindLabel="Name"
-          clearable="false"
-          bindValue="ID"
-          class="form-select"
-          (change)="onDepartmentChange()"
-          style="padding: 0.375rem 0.75rem; height: 4vh;">
-          <ng-template ng-option-tmp let-item="item" class="fs-12">
-            {{item.Name}}
-          </ng-template>
-        </ng-select>
-        <button type="button" class="btn btn-outline-secondary rounded px-3 d-flex align-items-center gap-2 py-2 ms-2" title="Đặt lại" (click)="resetDepartment()">
-          <i class="fas fa-times"></i>
-        </button>
+      <ng-select id="department" [(ngModel)]="department" name="department" [items]="departmentList" bindLabel="Name"
+        clearable="false" bindValue="ID" (change)="onDepartmentChange()"
+        style="width: 60%;">
+        <ng-template ng-option-tmp let-item="item" class="w-50">
+              <div class="row text-dark w-100 fs-12">
+                <div class="col-3 ms-1">
+                  <span class="fs-12">{{ item.Name }}</span>
+                </div>
+              </div>
+            </ng-template>
+      </ng-select>
+      <button type="button" class="btn btn-outline-secondary rounded px-3 d-flex align-items-center gap-2 py-2 ms-2"
+        title="Đặt lại" (click)="resetDepartment()">
+        <i class="fas fa-times"></i>
+      </button>
     </div>
     <div id="team-table"></div>
   </div>
   <div class="col-lg-6">
     <div class="toolbar mb-4 d-flex align-items-center gap-2 justify-content-end">
-      <button type="button" class="btn btn-outline-secondary rounded px-3 d-flex align-items-center gap-2" title="Thêm NV" (click)="openAddEmployeeModal()">
+      <button type="button" class="btn btn-outline-secondary rounded px-3 d-flex align-items-center gap-2"
+        title="Thêm NV" (click)="openAddEmployeeModal()">
         <i class="fas fa-plus"></i>
         <span>Thêm NV</span>
       </button>
-      <button type="button" class="btn btn-outline-secondary rounded px-3 d-flex align-items-center gap-2" title="Xóa NV" (click)="removeEmployeeFromTeam()">
+      <button type="button" class="btn btn-outline-secondary rounded px-3 d-flex align-items-center gap-2"
+        title="Xóa NV" (click)="removeEmployeeFromTeam()">
         <i class="fas fa-trash"></i>
         <span>Xóa NV</span>
       </button>
@@ -65,106 +67,87 @@
 
 <!-- Modal Thêm, sửa Team -->
 <div class="modal fade" id="addTeamModal" tabindex="-1" aria-labelledby="addTeamModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-      <div class="modal-content">
-          <div class="modal-header">
-              <h5 class="modal-title" id="addTeamModalLabel" *ngIf="!isEditMode">Thêm Team</h5>
-              <h5 class="modal-title" id="addTeamModalLabel" *ngIf="isEditMode">Sửa Team</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-              <form #teamForm="ngForm" (ngSubmit)="onSubmit(teamForm)">
-                  <div class="mb-3">
-                      <label for="department" class="form-label">Phòng ban</label>
-                      <ng-select
-                          id="department"
-                          [(ngModel)]="team.DepartmentID"
-                          name="department"
-                          [items]="departmentList"
-                          clearable="false"
-                          bindLabel="Name"
-                          bindValue="ID"
-                          placeholder="--Chọn phòng ban-- "
-                          class="form-select"
-                          style="padding: 0.375rem 0.75rem; height: 38px;">
-                          <ng-template ng-option-tmp let-item="item">
-                            {{item.Name}}
-                          </ng-template>
-                      </ng-select>
-                  </div>
-                  <div class="mb-3">
-                      <label for="parentID" class="form-label">Nhóm cha</label>
-                      <ng-select
-                          id="parentID"
-                          [(ngModel)]="team.ParentID"
-                          name="parentID"
-                          clearable="false"
-                          [items]="flattenedTeamList"
-                          bindLabel="Name"
-                          bindValue="ID"
-                          placeholder="--Chọn nhóm cha-- "
-                          class="form-select"
-                          style="padding: 0.375rem 0.75rem; height: 38px;">
-                          <ng-template ng-option-tmp let-item="item">
-                            <div class="d-flex align-items-center" [style.padding-left.px]="item.level * 20">
-                              <i *ngIf="item.children && item.children.length > 0" 
-                                 class="fas" 
-                                 [class.fa-chevron-right]="!item.expanded"
-                                 [class.fa-chevron-down]="item.expanded"
-                                 style="margin-right: 5px;">
-                              </i>
-                              <span>{{item.Name}}</span>
-                            </div>
-                          </ng-template>
-                      </ng-select>
-                  </div>
-                  <div class="mb-3">
-                      <label for="leader" class="form-label">Leader</label>
-                      <ng-select
-                          id="leader"
-                          [(ngModel)]="team.LeaderID"
-                          name="leader"
-                          clearable="false"
-                          [items]="employeeCombo"
-                          bindLabel="FullName"
-                          bindValue="ID"
-                          placeholder="--Chọn leader-- "
-                          class="form-select"
-                          style="padding: 0.375rem 0.75rem; height: 38px;">
-                          <ng-template ng-option-tmp let-item="item">
-                            {{item.FullName}}
-                          </ng-template>
-                      </ng-select>
-                  </div>
-                  <div class="mb-3">
-                    <label for="name" class="form-label">Tên Team</label>
-                    <input type="text" class="form-control" id="name" name="name" [(ngModel)]="team.Name" required #name="ngModel">
-                  </div>
-                  <div class="mb-3">
-                    <label for="typeName" class="form-label">Loại Team</label>
-                    <ng-select
-                        id="typeName"
-                        clearable="false"
-                        [(ngModel)]="team.ProjectTypeID"
-                        name="typeName"
-                        [items]="projectTypeList"
-                        bindLabel="ProjectTypeName"
-                        bindValue="ID"
-                        placeholder="--Chọn loại team-- "
-                        class="form-select"
-                        style="padding: 0.375rem 0.75rem; height: 38px;">
-                        <ng-template ng-option-tmp let-item="item">
-                          {{item.ProjectTypeName}}
-                        </ng-template>
-                    </ng-select>
-                </div>
-              </form>
-          </div>
-          <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" style="height: 3vh;">Hủy</button>
-              <button type="button" class="btn btn-primary" style="height: 3vh;" (click)="onSubmit(teamForm)">Lưu</button>
-          </div>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header bg-primary text-white">
+        <h6 class="modal-title text-uppercase" id="addTeamModalLabel" *ngIf="!isEditMode">Thêm Team</h6>
+        <h6 class="modal-title text-uppercase" id="addTeamModalLabel" *ngIf="isEditMode">Sửa Team</h6>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
+      <div class="modal-body">
+        <form #teamForm="ngForm" (ngSubmit)="onSubmit(teamForm)">
+          <div class="mb-3">
+            <label for="department" class="form-label">Phòng ban <span class="text-danger">(*)</span></label>
+            <ng-select id="department" [(ngModel)]="team.DepartmentID" name="department" [items]="departmentList"
+              clearable="true" bindLabel="Name" bindValue="ID" placeholder="--Chọn phòng ban-- "
+              >
+              <ng-template ng-option-tmp let-item="item" class="w-50">
+              <div class="row text-dark w-100 fs-12">
+                <div class="col-3 ms-1">
+                  <span class="fs-12">{{ item.Name }}</span>
+                </div>
+              </div>
+            </ng-template>
+            </ng-select>
+          </div>
+          <div class="mb-3">
+            <label for="parentID" class="form-label">Nhóm cha <span class="text-danger">(*)</span></label>
+            <ng-select id="parentID" [(ngModel)]="team.ParentID" name="parentID" clearable="true"
+              [items]="flattenedTeamList" bindLabel="Name" bindValue="ID" placeholder="--Chọn nhóm cha-- "
+             >
+              <ng-template ng-option-tmp let-item="item">
+                <div class="d-flex align-items-center" [style.padding-left.px]="item.level * 20">
+                  <i *ngIf="item.children && item.children.length > 0" class="fas"
+                    [class.fa-chevron-right]="!item.expanded" [class.fa-chevron-down]="item.expanded"
+                    style="margin-right: 5px;">
+                  </i>
+                  <span>{{item.Name}}</span>
+                </div>
+              </ng-template>
+            </ng-select>
+          </div>
+          <div class="mb-3">
+            <label for="leader" class="form-label">Leader <span class="text-danger">(*)</span></label>
+            <ng-select id="leader" [(ngModel)]="team.LeaderID" name="leader" clearable="true" [items]="employeeCombo"
+              bindLabel="FullName" bindValue="ID" placeholder="--Chọn leader-- "
+              >
+              <ng-template ng-option-tmp let-item="item">
+              <div class="row text-dark w-100 fs-12">
+                <div class="col-3 ms-1">
+                  <span class="fs-12">{{ item.FullName }}</span>
+                </div>
+              </div>
+            </ng-template>
+            </ng-select>
+          </div>
+          <div class="mb-3">
+            <label for="name" class="form-label">Tên Team <span class="text-danger">(*)</span></label>
+            <input type="text" class="form-control" id="name" name="name" [(ngModel)]="team.Name" required
+              #name="ngModel" style="height: 30px;">
+          </div>
+          <div class="mb-3">
+            <label for="typeName" class="form-label">Loại Team <span class="text-danger">(*)</span></label>
+            <ng-select id="typeName" clearable="true" [(ngModel)]="team.ProjectTypeID" name="typeName"
+              [items]="projectTypeList" bindLabel="ProjectTypeName" bindValue="ID" placeholder="--Chọn loại team-- "
+              >
+              <ng-template ng-option-tmp let-item="item" class="w-50">
+              <div class="row text-dark w-100 fs-12">
+                <div class="col-3 ms-1">
+                  <span class="fs-12">{{ item.ProjectTypeName }}</span>
+                </div>
+              </div>
+            </ng-template>
+            </ng-select>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal"
+          style="height: 3vh; border: 1px solid">Đóng</button>
+        <button type="button" class="btn btn-success" style="height: 3vh;" (click)="onSubmit(teamForm)">Lưu thay
+          đổi</button>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -173,36 +156,35 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <h6 class="modal-title" id="addEmployeeModalLabel">Thêm Nhân viên</h6>
+        <h6 class="modal-title text-uppercase" id="addEmployeeModalLabel">Thêm Nhân viên</h6>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body fs-12">
         <div class="d-flex align-items-center mb-2">
           <label for="" class="form-label col-lg-2 text-center m-0 fs-12">Phòng ban</label>
-          <ng-select
-              id="department"
-              [(ngModel)]="departmentEmployee"
-              name="department"
-              [items]="departmentEmployeeList"
-              bindLabel="Name"
-              clearable="false"
-              bindValue="ID"
-              class="form-select"
-              (change)="onDepartmentEmployeeChange()"
-              style="padding: 0.375rem 0.75rem; height: 4vh;">
-              <ng-template ng-option-tmp let-item="item" class="fs-12">
-                {{item.Name}}
-              </ng-template>
-            </ng-select>
-            <button type="button" class="btn btn-outline-secondary rounded px-3 d-flex align-items-center gap-2 py-2 ms-2" title="Đặt lại" (click)="resetDepartmentEmployee()">
-              <i class="fas fa-times"></i>
-            </button>
+          <ng-select id="department" [(ngModel)]="departmentEmployee" name="department" [items]="departmentEmployeeList"
+            bindLabel="Name" clearable="false" bindValue="ID" 
+            (change)="onDepartmentEmployeeChange()" style="width: 60%;">
+            <ng-template ng-option-tmp let-item="item" class="w-50">
+              <div class="row text-dark w-100 fs-12">
+                <div class="col-3 ms-1">
+                  <span class="fs-12">{{ item.Name }}</span>
+                </div>
+              </div>
+            </ng-template>
+          </ng-select>
+          <button type="button" class="btn btn-outline-secondary rounded px-3 d-flex align-items-center gap-2 py-2 ms-2"
+            title="Đặt lại" (click)="resetDepartmentEmployee()">
+            <i class="fas fa-times"></i>
+          </button>
         </div>
         <div id="employee-team-table"></div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click)="closeEmployeeModal()" style="height: 3vh;">Hủy</button>
-        <button type="button" class="btn btn-primary" (click)="addEmployeesToTeam()" style="height: 3vh;">Thêm</button>
+        <button type="button" class="btn btn-outline-danger" (click)="closeEmployeeModal()"
+          style="height: 3vh; border: 1px solid;">Đóng</button>
+        <button type="button" class="btn btn-success" (click)="addEmployeesToTeam()" style="height: 3vh;">Lưu thay
+          đổi</button>
       </div>
     </div>
   </div>
